Added sorting functionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,20 +15,31 @@ body {
   max-width: 800px;
 }
 
-#createPorduct {
+table {
+  width: 100%;
+}
+
+th,
+td {
+  border-bottom: 1px solid #ddd;
+  padding: 15px;
+  text-align: left;
+}
+
+#createProduct {
   width: 400px;
   padding: 32px 32px 32px 0px;
 }
 
-#createPorduct input[type='text'],
-#createPorduct input[type='checkbox'],
-#createPorduct input[type='number'] {
+#createProduct input[type='text'],
+#createProduct input[type='checkbox'],
+#createProduct input[type='number'] {
   margin-left: 24px;
   margin-bottom: 8px;
   width: 160px;
   float: right;
 }
 
-#createPorduct br {
+#createProduct br {
   clear: both;
 }
